--- a/src/index.css
+++ b/src/index.css
@@ -23,10 +23,19 @@ ul.exception {
 .metric-box {
   display: flex;
   justify-content: space-between;
-  align-items: start;
+  align-items: flex-start;
   padding: 30px 15px;
   border-radius: 5px;
   width: 100%;
+}
+
+.metric-box span .metric-title {
+  font-weight: bold;
+}
+.metric-box span span  {
+  color: gray;
+  opacity: .7;
+  font-weight: 600;
 }
 .pad {
   padding: 15px;
@@ -34,7 +43,10 @@ ul.exception {
 .white {
   background: #FFFFFF;
 }
-
+table tbody tr td,
+table tbody tr th {
+  vertical-align: middle !important;
+}
 tbody tr td.location,
 td.entries {
   font-size: 13px;
@@ -71,6 +83,7 @@ td.entries {
   left: calc(0% + 15px);
   bottom: 85px;
   width: 2px;
+  border-left: 2px dotted #444;
   background: #ddd;
 }
 
@@ -95,7 +108,6 @@ td.entries {
   width: 8px;
   height: 8px;
   border: 4px solid black;
-  opacity: .6;
   border-radius: 100%;
   left: -13px;
   top: 12%;
