--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@ body {
   margin: 0;
   font-family: 'Poppins', sans-serif;
   background: #F5F5F5;
+  font-weight: 500;
 }
 
 .profile-info ul li {
@@ -13,14 +14,6 @@ ul {
   padding: 0;
   margin-bottom: 0;
 
-}
-
-li.nav-item.nav-item__link {
-  margin-bottom: -10px;
-}
-
-li.nav-item a {
-  border-bottom: 4px solid blue;
 }
 
 ul.exception {
@@ -92,7 +85,6 @@ td.entries {
 .timeline {
   width: 100%;
   max-width: 800px;
-  background: #fff;
   padding-left: 25px;
   /*padding: 100px 50px;*/
   position: relative;
@@ -103,16 +95,20 @@ td.entries {
   position: absolute;
   top: 25px;
   left: calc(0% + 15px);
-  bottom: 85px;
+  bottom: 71px;
   width: 2px;
   border-left: 2px dotted #444;
   background: #ddd;
 }
 
+.nav-item {
+  vertical-align: middle;
+}
 .entry {
   clear: both;
   text-align: left;
   position: relative;
+  font-size: 13px;
 }
 
 .entry .body:before {
@@ -129,6 +125,45 @@ td.entries {
   background-color: #fff;
   right: -8px;
   z-index: 99;*/
+}
+
+.web-dot {
+  display: inline-list-item;
+}
+li.nav-item.nav-item__link {
+  margin-bottom: -11px;
+}
+li.nav-item.nav-item__middle {
+  display: flex;
+  align-items: center;
+}
+
+.rotate svg {
+  transform: rotate(180deg);
+}
+
+.avatar {
+  vertical-align: middle;
+  width: 30px;
+  border-radius: 50%;
+  position: relative;
+
+}
+.profile-info ul li:first-of-type span:first-of-type svg {
+  background: rgba(0, 0, 225, .7);
+  width: 30px;
+  height: 30px;
+  padding: 5px;
+  color: white;
+  border-radius: 6px;
+}
+.profile-info ul {
+  font-size: 15px;
+}
+
+.active a {
+  border-bottom: 4px solid blue;
+  background: rgba(0, 0, 255, 0.3);
 }
 
 .timeline-wrapper {
@@ -158,6 +193,10 @@ td.entries {
   position: relative;
 }
 
+.entry .title h3 {
+  margin: 0;
+  font-size: 120%;
+}
 .entry .title p {
   margin: 0;
   font-size: 100%;
@@ -180,8 +219,28 @@ td.entries {
   padding-left: 0;
   list-style-type: none;
 }
-.entry .body ul li:before {
-  content: "–";
-  margin-right: 0.5em;
-}
+
 */
+.entry .body ul {
+  display: inline;
+}
+.entry .body ul li {
+  display: inline;
+}
+.entry .body span:before {
+  content: '';
+  position: absolute;
+  width: 3px;
+  height: 3px;
+  border: 4px solid black;
+  border-radius: 100%;
+  top: 80%;
+  left: 95px;
+
+  /*position: absolute;
+  width: 8px;
+  height: 8px;
+  border: 4px solid black;
+
+  top: 12%;*/
+}
