--- a/src/index.css
+++ b/src/index.css
@@ -1,315 +1,305 @@
 body {
-    margin: 0;
-    font-family: 'Poppins', sans-serif;
-    background: #EDF6FF;
-    font-weight: 500;
+  margin: 0;
+  font-family: 'Poppins', sans-serif;
+  background: #edf6ff;
+  font-weight: 500;
 }
 
 .pad {
-    padding: 15px;
+  padding: 15px;
 }
 
 .white {
-    background: #FFFFFF;
+  background: #ffffff;
 }
 
-
 .red {
-    color: #B63A3A;
+  color: #b63a3a;
 }
 
 .green {
-    color: #3AB65C;
+  color: #3ab65c;
 }
 
 .blue {
-    color: blue;
+  color: blue;
 }
 
 .orange {
-    color: #F4B400;
+  color: #f4b400;
 }
 
 .purple {
-    color: #3C3AB6;
+  color: #3c3ab6;
 }
 
 /*NAVIGATION*/
 
 ul {
-    list-style-type: none;
-    padding: 0;
-    margin-bottom: 0;
+  list-style-type: none;
+  padding: 0;
+  margin-bottom: 0;
 }
 
 ul.exception {
-    list-style-type: disc;
-    padding-left: 13px;
-    font-weight: bold;
-    color: black;
-
+  list-style-type: disc;
+  padding-left: 13px;
+  font-weight: bold;
+  color: black;
 }
 
 .active a {
-    border-bottom: 4px solid blue;
-    background: rgba(0, 0, 255, 0.3);
+  border-bottom: 4px solid blue;
+  background: rgba(0, 0, 255, 0.3);
 }
 
 .profile-info ul li {
-    padding: 7px 0;
+  padding: 7px 0;
 }
 
 .nav-item {
-    vertical-align: middle;
+  vertical-align: middle;
 }
 
 .nav-item .nav-link svg {
-    vertical-align: baseline;
-    margin-right: 5px;
+  vertical-align: baseline;
+  margin-right: 5px;
 }
 
-
 .avatar {
-    vertical-align: middle;
-    width: 30px;
-    border-radius: 50%;
-    position: relative;
+  vertical-align: middle;
+  width: 30px;
+  border-radius: 50%;
+  position: relative;
 }
 
 li.nav-item.nav-item__link {
-    margin-bottom: -11px;
+  margin-bottom: -11px;
 }
 
 li.nav-item.nav-item__middle {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .path div span svg {
-    vertical-align: baseline;
+  vertical-align: baseline;
 }
 
 /*METRIC*/
 
 .metric-box {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    padding: 30px 15px;
-    border-radius: 6px;
-    width: 100%;
-    box-shadow: 0 4px 30px rgba(192, 192, 192, 0.25);
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding: 30px 15px;
+  border-radius: 6px;
+  width: 100%;
+  box-shadow: 0 4px 30px rgba(192, 192, 192, 0.25);
 }
 
 .metric-box span .metric-title {
-    font-weight: bold;
-    color: #19191D;
+  font-weight: bold;
+  color: #19191d;
 }
 
 .metric-box span span {
-    color: #9696A0;
-    opacity: .7;
-    font-weight: 700;
-    font-size: 16px;
+  color: #9696a0;
+  opacity: 0.7;
+  font-weight: 700;
+  font-size: 16px;
 }
 
 .rotate svg {
-    transform: rotate(180deg);
-    color: #B4B4BB;
+  transform: rotate(180deg);
+  color: #b4b4bb;
 }
 
-
 .circle {
-    width: 2px;
-    height: 2px;
-    display: block;
-    border: 2px solid #C4C4C4;
-    margin-right: 3px;
-    border-radius: 100%;
-    vertical-align: middle;
+  width: 2px;
+  height: 2px;
+  display: block;
+  border: 2px solid #c4c4c4;
+  margin-right: 3px;
+  border-radius: 100%;
+  vertical-align: middle;
 }
 
 /* TIMELINE */
 
 .timeline {
-    width: 100%;
-    max-width: 800px;
-    padding-left: 25px;
-    position: relative;
+  width: 100%;
+  max-width: 800px;
+  padding-left: 25px;
+  position: relative;
 }
 
 .timeline:before {
-    content: '';
-    position: absolute;
-    top: 62px;
-    left: calc(0% + 15px);
-    bottom: 71px;
-    width: 2px;
-    border-left: 2px dotted #444;
-    background: #ddd;
+  content: '';
+  position: absolute;
+  top: 62px;
+  left: calc(0% + 15px);
+  bottom: 71px;
+  width: 2px;
+  border-left: 2px dotted #444;
+  background: #ddd;
 }
 
 .entry {
-    clear: both;
-    text-align: left;
-    position: relative;
-    font-size: 12px;
-    font-weight: 700;
+  clear: both;
+  text-align: left;
+  position: relative;
+  font-size: 12px;
+  font-weight: 700;
 }
 
 .entry .body {
-    color: #747474;
+  color: #747474;
 }
 
 .entry .body:before {
-    content: '';
-    position: absolute;
-    width: 8px;
-    height: 8px;
-    border: 4px solid rgba(105, 105, 105, 1);
-    border-radius: 100%;
-    left: -13px;
-    top: 12%;
-    z-index: 99;
+  content: '';
+  position: absolute;
+  width: 8px;
+  height: 8px;
+  border: 4px solid rgba(105, 105, 105, 1);
+  border-radius: 100%;
+  left: -13px;
+  top: 12%;
+  z-index: 99;
 }
 
 .entry .body ul {
-    display: inline;
+  display: inline;
 }
 
 .entry .body ul li {
-    display: inline;
+  display: inline;
 }
 
 .entry .body span,
 .entry .body ul {
-    color: #A1AACE;
+  color: #a1aace;
 }
 
 .profile-info ul li:first-of-type span:first-of-type svg,
 .timeline-header-wrapper .timeline--header span:first-of-type svg {
-    background: #00A2D6;
-    width: 30px;
-    height: 30px;
-    padding: 5px;
-    color: white;
-    border-radius: 6px;
+  background: #00a2d6;
+  width: 30px;
+  height: 30px;
+  padding: 5px;
+  color: white;
+  border-radius: 6px;
 }
 
 .timeline-header-wrapper .timeline--header {
-    margin-left: -12px;
+  margin-left: -12px;
 }
 
 .profile-info ul li:first-of-type,
 .timeline ul {
-    font-size: 14px !important;
-    font-weight: 700;
-    color: #000000;
+  font-size: 14px !important;
+  font-weight: 700;
+  color: #000000;
 }
 
 .profile-info ul {
-    font-size: 14px !important;
-    color: #0F1A4F;
-    font-weight: 400;
+  font-size: 14px !important;
+  color: #0f1a4f;
+  font-weight: 400;
 }
 
 /* EMPLOYEE */
 
 .main {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .cols-1 {
-    width: 18.2%;
+  width: 18.2%;
 }
 
 .cols-2 {
-    width: 79.4%;
+  width: 79.4%;
 }
 .employee-wrapper {
-
 }
 
 .employee-wrapper .employee-info {
-
 }
 
 table tbody tr {
-    box-shadow: inset 0 -1px 0 rgba(183, 183, 183, 0.25);
+  box-shadow: inset 0 -1px 0 rgba(183, 183, 183, 0.25);
 }
 table tbody tr td,
 table tbody tr th {
-    vertical-align: middle !important;
+  vertical-align: middle !important;
 }
 
 tbody tr td.location,
 td.entries {
-    font-size: 13px;
-    color: gray;
+  font-size: 13px;
+  color: gray;
 }
 
 .employee-wrapper .employee-info .fullName,
 .employee-wrapper .employee-info .status,
 .employee-wrapper .employee-info .risk--profile {
-    font-size: 14px;
+  font-size: 14px;
 }
 
 .employee-wrapper .employee-info .fullName {
-    font-weight: 400;
-    color: #25213B;
+  font-weight: 400;
+  color: #25213b;
 }
 
 .employee-wrapper .employee-info .status {
-    font-weight: 700;
+  font-weight: 700;
 }
 
 .employee-wrapper .employee-info .risk--profile {
-    font-weight: 500;
+  font-weight: 500;
 }
 
 .employee-wrapper .employee-info .location,
 .employee-wrapper .employee-info .entries {
-    font-size: 12px;
+  font-size: 12px;
 }
 
 .location .location--city {
-    color: #25213B;
-
+  color: #25213b;
 }
 
 .location .location--address {
-    color: #878592;
-
+  color: #878592;
 }
 
 .entries {
-    color: #878592;
+  color: #878592;
 }
 
 .entries ul {
-    color: #25213B;
+  color: #25213b;
 }
 
 .input-icons {
-    position: relative;
-    margin-right: -80px;
+  position: relative;
+  margin-right: -80px;
 }
 
 .input-field {
-    height: 35px;
-    border: 1px solid #DCE1E7;
-    padding: 10px 10px 10px 35px;
-    border-radius: 5px;
-    width: 41%;
-    margin-left: 180px;
+  height: 35px;
+  border: 1px solid #dce1e7;
+  padding: 10px 10px 10px 35px;
+  border-radius: 5px;
+  width: 41%;
+  margin-left: 180px;
 }
 
 .input-icons span {
-    position: absolute;
-    top: 7px;
-    left: 35%;
-    pointer-events: none;
+  position: absolute;
+  top: 7px;
+  left: 35%;
+  pointer-events: none;
 }
-
-
